--- a/src/components/MasterTable/styles.css
+++ b/src/components/MasterTable/styles.css
@@ -9,8 +9,8 @@
 .modal-main {
   position: fixed;
   background: white;
-  width: 70%;
-  height: 70%;
+  width: 90%;
+  height: 90%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -26,10 +26,63 @@
 
 .modal-container {
   width: 100%;
-  height: 75%;
+  height: 90%;
   overflow: auto;
 }
 
 .table {
   text-align: left;
+}
+
+.inputFilter {
+  display: block !important;
+}
+
+/* Main styles for the boxes */
+
+.box {
+  position: relative;
+  border-radius: 3px;
+  background: #ffffff;
+  border-top: 3px solid #d2d6de;
+  margin-bottom: 20px;
+  width: 100%;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+.box-header {
+  color: #444;
+  display: block;
+  padding: 10px;
+  position: relative;
+}
+
+.no-padding {
+  padding: 0 !important;
+}
+
+.box-body {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 3px;
+  padding: 10px;
+}
+.table-responsive {
+  min-height: 0.01%;
+  overflow-x: auto;
+}
+
+.box-body > .table {
+  margin-bottom: 0;
+}
+
+.buttonClose {
+  top: 0.1%;
+  right: 0.01%;
+  position: absolute;
+  font-size: large;
+  background: none;
+  border: none;
+  color: inherit;
 }
