--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,5 @@
 body{
-    /*background-image: url('../assets/background.jpg');*/
+    background-image: url('../assets/background.jpg');
     height: 100%;
     background-size: cover;
     background-repeat: none;
