--- a/src/components/DetailsTable/style.css
+++ b/src/components/DetailsTable/style.css
@@ -13,10 +13,11 @@
 
 .image-comic {
   width: 100%;
-  max-width: 400px;
-  height: auto;
-  float: left;
-  margin: 0 15px 0 15px;
+  height: 200px;
+  background-size: cover;
+  -moz-border-radius: 25px;
+  -webkit-border-radius: 25px;
+  border-radius: 25px;
 }
 
 .paragraph {
@@ -57,4 +58,49 @@ input:checked + label {
 input ~ .tab {
   border-top: 1px solid #999;
   padding: 12px;
+}
+
+/* this is for the new cards */
+
+.box {
+  position: relative;
+  border-radius: 3px;
+  background: #ffffff;
+  border-top: 3px solid #d2d6de;
+  width: 100%;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+ul li {
+  display: inline-block;
+  opacity: 1;
+  border: 10px solid #fff;
+  position: relative;
+  -webkit-transition: opacity 0.25s ease-in-out;
+  -moz-transition: opacity 0.25s ease-in-out;
+  -ms-transition: opacity 0.25s ease-in-out;
+  -o-transition: opacity 0.25s ease-in-out;
+  transition: opacity 0.25s ease-in-out;
+  -moz-box-shadow: 0px 0px 5px 4px #ccc;
+  -webkit-box-shadow: 0px 0px 5px 4px #ccc;
+  box-shadow: 0px 0px 5px 4px #ccc;
+}
+ul li,
+ul li div {
+  background: #999;
+  text-align: center;
+  -moz-border-radius: 40px;
+  -webkit-border-radius: 40px;
+  border-radius: 40px;
+}
+
+.divulli {
+  background: #bf1a1a;
+  position: absolute;
+  top: 80%;
+  width: 100%;
+  height: 40px;
+  color: #ffffff;
+  font-size: 1.2em;
+  border-radius: 0px 0px 25px 25px;
 }
