--- a/src/components/MasterTable/styles.css
+++ b/src/components/MasterTable/styles.css
@@ -38,43 +38,14 @@
   display: block !important;
 }
 
-/* Main styles for the boxes */
-
-.box {
-  position: relative;
-  border-radius: 3px;
-  background: #ffffff;
-  border-top: 3px solid #d2d6de;
-  margin-bottom: 20px;
-  width: 100%;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+.image-index{
+  width: 100%; 
+  height: 50%;
+  
 }
 
-.box-header {
-  color: #444;
-  display: block;
-  padding: 10px;
-  position: relative;
-}
-
-.no-padding {
-  padding: 0 !important;
-}
-
-.box-body {
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 3px;
-  border-bottom-left-radius: 3px;
-  padding: 10px;
-}
-.table-responsive {
-  min-height: 0.01%;
-  overflow-x: auto;
-}
-
-.box-body > .table {
-  margin-bottom: 0;
+.divcard{
+  visibility: visible; animation-duration: 1500ms; animation-delay: 0ms; animation-name: fadeInUp;
 }
 
 .buttonClose {
