--- a/src/components/DetailsTable/style.css
+++ b/src/components/DetailsTable/style.css
@@ -20,9 +20,27 @@
   border-radius: 25px;
 }
 
+.image-comic:hover {
+  opacity: 0.5;
+  cursor: pointer;
+}
+
 .paragraph {
   text-align: justify;
-  margin: 0px 4% 0px 0;
+  margin: 5% 3% 0px 0;
+  font-size: 2.5em;
+  padding: 1%;
+  background-color: #da1c1c;
+  color: white;
+}
+
+.paragraphDescription {
+  text-align: justify;
+  margin: 1% 3% 0px 0;
+  font-size: 1.2em;
+  padding: 1%;
+  background-color: #bfb700;
+  color: white;
 }
 
 input {
@@ -61,6 +79,17 @@ input ~ .tab {
 }
 
 /* this is for the new cards */
+
+.row {
+  margin-right: 5% !important;
+  margin-left: -15px !important;
+}
+
+.h1,
+h1 {
+  font-size: 36px;
+  font-weight: 800;
+}
 
 .box {
   position: relative;
@@ -103,4 +132,49 @@ ul li div {
   color: #ffffff;
   font-size: 1.2em;
   border-radius: 0px 0px 25px 25px;
+}
+/* Div for Comics */
+
+.divulliComics {
+  background: #bf1a1a;
+  position: absolute;
+  top: 80%;
+  width: 100%;
+  height: 40px;
+  color: #ffffff;
+  font-size: 1.2em;
+  border-radius: 0px 0px 25px 25px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* Div for stories */
+
+.divStories {
+  background-color: white;
+  padding-left: 36px;
+  height: 36px;
+  border-radius: 6px;
+  font-size: 1.5rem;
+  line-height: 36px;
+  position: relative;
+  margin-bottom: 12px;
+  vertical-align: middle;
+  text-align: justify;
+  border-radius: 20px;
+}
+
+/* List style for stories */
+#image {
+  background-color: white;
+  line-height: 1.5em;
+  list-style: none;
+  border-radius: 10px;
+}
+
+.imge-list-stories {
+  width: 3%;
+  height: 78%;
+  margin-right: 1%;
 }
