--- a/src/components/DetailsTable/style.css
+++ b/src/components/DetailsTable/style.css
@@ -38,8 +38,9 @@
   text-align: justify;
   margin: 1% 3% 0px 0;
   font-size: 1.2em;
+  font-family: 'heroes';
   padding: 1%;
-  background-color: #bfb700;
+  background-color: inherit;
   color: white;
 }
 
@@ -49,34 +50,7 @@ input {
 input + label {
   display: inline-block;
 }
-input ~ .tab {
-  display: none;
-}
-#tab1:checked ~ .tab.content1,
-#tab2:checked ~ .tab.content2 {
-  display: block;
-  width: 95%;
-  float: left;
-  height: 20%;
-}
 
-input + label {
-  border: 1px solid #999;
-  background: #eee;
-  padding: 4px 12px;
-  border-radius: 4px 4px 0 0;
-  position: relative;
-  top: 1px;
-  float: left;
-}
-input:checked + label {
-  background: #fff;
-  border-bottom: 1px solid transparent;
-}
-input ~ .tab {
-  border-top: 1px solid #999;
-  padding: 12px;
-}
 
 /* this is for the new cards */
 
@@ -89,6 +63,7 @@ input ~ .tab {
 h1 {
   font-size: 36px;
   font-weight: 800;
+  color: #ffffff;
 }
 
 .box {
@@ -163,6 +138,7 @@ ul li div {
   vertical-align: middle;
   text-align: justify;
   border-radius: 20px;
+  font-family: 'heroes';
 }
 
 /* List style for stories */
