--- a/src/components/MasterTable/styles.css
+++ b/src/components/MasterTable/styles.css
@@ -8,7 +8,7 @@
 }
 .modal-main {
   position: fixed;
-  background: #fdf9a1;
+  background: #322543;
   padding: 5px;
   width: 90%;
   height: 90%;
@@ -22,7 +22,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 2px solid #370073;
+  border-top: 2px solid #fff;
 }
 
 .display-block {
@@ -35,7 +35,7 @@ hr {
 
 .modal-container {
   width: 100%;
-  height: 90%;
+  height: 97%;
   overflow: auto;
 }
 
@@ -53,13 +53,13 @@ hr {
 }
 
 .buttonClose {
-  top: 0.1%;
-  right: 0.01%;
+  top: 0.9%;
+  right: 0.4%;
   position: absolute;
-  font-size: large;
+  font-size: 30px;
   background: none;
   border: none;
-  color: inherit;
+  color: aliceblue;
 }
 
 a {
@@ -100,7 +100,7 @@ select:focus {
   color: #efedef;
   cursor: pointer;
   display: block;
-  font-size: 1.1em;
+  font-size: 2.1em;
   font-weight: 300;
   line-height: 1em;
   padding: 2rem 0;
