--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,23 @@
+@font-face {
+  font-family: 'comic';
+  font-size: 1.2;
+  src:
+   url('./font/heroesassemble3d.ttf') format('truetype'); 
+}
+
+@font-face {
+  font-family: 'heroes';
+  src:
+   url('./font/HEROES.ttf') format('truetype'); 
+}
+
 body {
 
   line-height: 1.6em;
-  font-weight: 400;
+  font-weight: 100;
   background: #0c0a0a;
   font-size: 1.5rem;
-  font-family: "PT Sans", sans-serif;
+  font-family: "comic";
 }
 .App {
   text-align: center;
