--- a/src/components/DetailsTable/style.css
+++ b/src/components/DetailsTable/style.css
@@ -38,7 +38,7 @@
   text-align: justify;
   margin: 1% 3% 0px 0;
   font-size: 1.2em;
-  font-family: 'heroes';
+  font-family: "heroes";
   padding: 1%;
   background-color: inherit;
   color: white;
@@ -50,7 +50,6 @@ input {
 input + label {
   display: inline-block;
 }
-
 
 /* this is for the new cards */
 
@@ -138,7 +137,7 @@ ul li div {
   vertical-align: middle;
   text-align: justify;
   border-radius: 20px;
-  font-family: 'heroes';
+  font-family: "heroes";
 }
 
 /* List style for stories */
