--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,18 +1,15 @@
 @font-face {
-  font-family: 'comic';
+  font-family: "comic";
   font-size: 1.2;
-  src:
-   url('./font/heroesassemble3d.ttf') format('truetype'); 
+  src: url("./font/heroesassemble3d.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'heroes';
-  src:
-   url('./font/HEROES.ttf') format('truetype'); 
+  font-family: "heroes";
+  src: url("./font/HEROES.ttf") format("truetype");
 }
 
 body {
-
   line-height: 1.6em;
   font-weight: 100;
   background: #0c0a0a;
